改行の微調整

--- a/src/index.html
+++ b/src/index.html
@@ -577,10 +577,8 @@
                 <dd>
                   <h3 class="p-schedule__item-title hiragino">
                     朝礼、申し送り、<br
-                      class="pc-only"
-                    />入居者様とのコミュニケーション、<br
-                      class="sp-only"
-                    />排泄介助
+                      class="sp-only" />入居者様とのコミュニケーション、<br
+                      class="sp-only" />排泄介助
                   </h3>
                 </dd>
               </dl>
@@ -713,7 +711,7 @@
             <strong>勤続年数</strong><span>4年6ヶ月</span><br />
             <strong>好きなこと</strong>
             <span>
-              映画鑑賞・みんなでワイワイキャンプ・みんなでカラオケ海釣り・飲食巡り
+              映画鑑賞・<br class="sp-only">みんなでワイワイキャンプ・<br class="sp-only">みんなでカラオケ海釣り・<br class="sp-only">飲食巡り
             </span>
           </div>
           <div class="p-schedule-prof-message__box">
@@ -763,7 +761,7 @@
                   <h3 class="p-schedule__item-title hiragino">
                     女性利用者様のドライヤー<br />
                     レクリエーションの声掛け<br />
-                    他の職員と協力して100名分の食事準備
+                    他の職員と協力して<br class="sp-only">100名分の食事準備
                   </h3>
                 </dd>
               </dl>
@@ -781,7 +779,7 @@
                 <dd>
                   <h3 class="p-schedule__item-title hiragino">
                     ちょっと遅めのランチタイム<br />
-                    ネットフリックスを見ながらお弁当タイム！!!
+                    ネットフリックスを見ながら<br class="sp-only">お弁当タイム！!!
                   </h3>
                 </dd>
               </dl>
@@ -798,7 +796,7 @@
                 <dt class="p-schedule__item-time hiragino">17:00</dt>
                 <dd>
                   <h3 class="p-schedule__item-title hiragino">
-                    他職員と協力して利用者様とご飯づくり、<br />
+                    他職員と協力して<br class="sp-only">利用者様とご飯づくり、<br />
                     配線、服薬、口腔ケア、<br class="sp-only" />就寝介助
                   </h3>
                 </dd>
@@ -879,7 +877,7 @@
           <div class="sp-only p-schedule__first-info">
             <strong>勤続年数</strong><span>9年 </span><br />
             <strong>好きなこと</strong>
-            <span>子供と遊ぶこと・通勤中に大音量で洋楽を聞くこと</span>
+            <span>子供と遊ぶこと・<br class="sp-only">通勤中に大音量で洋楽を聞くこと</span>
           </div>
           <div class="p-schedule-prof-message__box">
             <div class="p-schedule-prof-message__text">
@@ -1070,7 +1068,7 @@
           <div class="sp-only p-schedule__first-info">
             <strong>勤続年数</strong><span>4年 </span><br />
             <strong>好きなこと</strong>
-            <span>映画鑑賞・カラオケ・つまみ細工</span>
+            <span>映画鑑賞・カラオケ・<br class="sp-only">つまみ細工</span>
           </div>
           <div class="p-schedule-prof-message__box">
             <div class="p-schedule-prof-message__text">
@@ -1079,7 +1077,7 @@
               </h3>
               <p>
                 適材適所。出来る事をみつけ任せてもらえたことが嬉しくてモリモリやらせてもらいました。<br />
-                できないことより出来る事！私も誰かの為に！
+                できないことより出来る事！<br class="sp-only">私も誰かの為に！
               </p>
             </div>
             <div class="p-schedule-prof-message__text">
@@ -1088,7 +1086,7 @@
               </h3>
               <p>
                 春になると爽やかな風が吹きます。新人さんは爽やかな新しい風です。やりたかった事ここで見つけて下さい。<br />
-                安全に見守る介護（介助）。一人じゃありません。私達仲間がいます。一緒に頑張っていきましょう！<br />
+                安全に見守る介護(介助)。<br class="sp-only">一人じゃありません。私達仲間がいます。<br class="sp-only">一緒に頑張っていきましょう！<br />
                 私は何事にも明るく楽しくがモットーです。それだけでは介護はできません。それもわかっています。<br />
                 1人が2人、2人が3人となり、仲間と一緒に利用者様へ信頼・安心・安全を届けて頂ける方、ウェルカムです。<br />
                 介護は自宅の延長ではありません。最小で9名～。9人家族の見守り、食事、洗濯、掃除簡単ではありませんが、<br />
@@ -1105,8 +1103,7 @@
                 <dt class="p-schedule__item-time hiragino">9:00</dt>
                 <dd>
                   <h3 class="p-schedule__item-title hiragino">
-                    食事、口腔がおわり利用者様はゆっくり<br class="pc-only" />
-                    過ごされている時間です。<br />
+                    食事、口腔がおわり利用者様はゆっくり<br class="pc-only" />過ごされている時間です。<br />
                     掃除や洗濯物、記録などをまとめる。<br />
                   </h3>
                 </dd>
