テキストの調整

--- a/src/index.html
+++ b/src/index.html
@@ -1086,11 +1086,10 @@
               </h3>
               <p>
                 春になると爽やかな風が吹きます。新人さんは爽やかな新しい風です。やりたかった事ここで見つけて下さい。<br />
-                安全に見守る介護(介助)。<br class="sp-only">一人じゃありません。私達仲間がいます。<br class="sp-only">一緒に頑張っていきましょう！<br />
+                安全に見守る介護(介助)。一人じゃありません。私達仲間がいます。一緒に頑張っていきましょう！<br />
                 私は何事にも明るく楽しくがモットーです。それだけでは介護はできません。それもわかっています。<br />
                 1人が2人、2人が3人となり、仲間と一緒に利用者様へ信頼・安心・安全を届けて頂ける方、ウェルカムです。<br />
-                介護は自宅の延長ではありません。最小で9名～。9人家族の見守り、食事、洗濯、掃除簡単ではありませんが、<br />
-                利用者様の為に職員一同とにかく信頼・協力・安心・継続を目指しています。ウェルカム！！
+                介護は自宅の延長ではありません。最小で9名～。9人家族の見守り、食事、洗濯、掃除簡単ではありませんが、利用者様の為に職員一同とにかく信頼・協力・安心・継続を目指しています。ウェルカム！！
               </p>
             </div>
           </div>
@@ -1254,7 +1253,7 @@
               <p>
                 生活相談員の知識が無く右も左も分からずスタートして今現在のポジションを頂けた。<br
                   class="sp-only"
-                />自身の能力を磨けたことにやりがいを感じている事と、能力給もあるし、個人評価もして頂き収入アップの希望が持てる楽しみがある。
+                />自身の能力を磨けたことにやりがいを感じている事と、能力給もあるし、個人評価もして頂き収入アップの希望が持てる楽しみがあります。
               </p>
             </div>
             <div class="p-schedule-prof-message__text">
