--- a/src/index.html
+++ b/src/index.html
@@ -1921,15 +1921,20 @@
           </p>
         </div>
         <div class="p-career__item-image">
-          <h3 class="p-career__item-image__title">
+          <!-- <h3 class="p-career__item-image__title">
             <span> キャリアアップイメージ図 </span>
-          </h3>
+          </h3> -->
           <img
             src="/assets/img/career/career_01.png"
             alt="キャリアアップイメージ図"
+            class="pc-only"
+          />
+          <img
+            src="/assets/img/career/career_02.png"
+            alt="キャリアアップイメージ図"
+            class="sp-only"
           />
         </div>
-        <span class="listMark-grid">※夜勤4回、諸手当含む</span>
       </div>
       <div class="p-career__wrap bottom delay">
         <div class="p-career__box" id="career02">
@@ -2171,7 +2176,7 @@
             </p>
             <p class="p-faq-list__item-answer">
               <span>A</span>
-              可能です。皆さんが不安を抱かず働き、休るようにしっかりと話し合いの上、決定します。また、時短勤務や、午後・午前だけの勤務もできるようにできる限り配慮しています。
+              可能です。皆さんが不安を抱かず働き、休めるようにしっかりと話し合いの上、決定します。また、時短勤務や、午後・午前だけの勤務もできるようにできる限り配慮しています。
             </p>
           </li>
           <li class="p-faq-list__item">
@@ -2211,7 +2216,7 @@
             </p>
             <p class="p-faq-list__item-answer">
               <span>A</span>
-              取りやすいと思います。皆が気持ちよく休んでいただくために、出来るだけ早く責任者にご希望をお知らせください。
+              取りやすいと思います。皆さんが気持ちよく休んでいただくために、出来るだけ早く責任者にご希望をお知らせください。
             </p>
           </li>
           <li class="p-faq-list__item">
@@ -2231,7 +2236,7 @@
             </p>
             <p class="p-faq-list__item-answer">
               <span>A</span>
-              ネイル、髪の色に関しては派手過ぎなければ大丈夫です。詳しくは面接時にご相談ください。
+              ネイル、髪の色に関しては派手過ぎなければ大丈夫です。詳しくは詳しくは<a class="c-textLink" href="/contact">こちら</a>からお問い合わせください。
             </p>
           </li>
           <li class="p-faq-list__item">
@@ -2261,7 +2266,7 @@
             </p>
             <p class="p-faq-list__item-answer">
               <span>A</span>
-              入社時に働く施設は選べます。ご希望される事業所にご応募下さい。
+              入社時に働く施設は選べます。ご希望される事業所は、<a class="c-textLink" href="/contact">こちら</a>からご応募ください。
             </p>
           </li>
         </ul>
