metaタグの追加

--- a/src/index.html
+++ b/src/index.html
@@ -354,7 +354,7 @@
         <div class="p-work__item delay">
           <div class="p-work__img pc-only">
             <img
-              src="/assets/img/work/work_5.png"
+              src="/assets/img/work/work_6.png"
               alt="社会問題の解決に参加できる"
             />
           </div>
@@ -364,7 +364,7 @@
             </h3>
             <div class="p-work__img sp-only">
               <img
-                src="/assets/img/work/work_5.png"
+                src="/assets/img/work/work_6.png"
                 alt="社会問題の解決に参加できる"
               />
             </div>
@@ -383,7 +383,7 @@
         <div class="p-work__item delay">
           <div class="p-work__img pc-only">
             <img
-              src="/assets/img/work/work_6.png"
+              src="/assets/img/work/work_6-1.png"
               alt="充実した研修制度キャリアアップ"
             />
           </div>
@@ -393,7 +393,7 @@
             </h3>
             <div class="p-work__img sp-only">
               <img
-                src="/assets/img/work/work_6.png"
+                src="/assets/img/work/work_6-1.png"
                 alt="充実した研修制度キャリアアップ"
               />
             </div>
